<resources>
    <string name="app_name">GamerBold</string>
    <string name="app_web_name">www.gamerbold.com</string>

    <string name="login_title">Login</string>
    <string name="login_subtitle">Please sign in to continue</string>
    <string name="login_resend_otp">Resend OTP?</string>
    <string name="login_send_otp">Verify OTP</string>
    <string name="login_button">Login</string>

    <string name="register_title">Register</string>
    <string name="register_subtitle">We have been waiting for you!</string>
    <string name="register_button">Register</string>
    <array name="match_status_options">
        <item>Upcoming</item>
        <item>Ongoing</item>
        <item>VPast</item>
    </array>
</resources>