<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_register"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/outer_padding"
        android:layout_marginBottom="30dp"
        android:gravity="center">

        <TextView
            android:id="@+id/register_title_tv"
            style="@style/h1"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="150dp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/outer_padding"
        android:padding="@dimen/outer_padding"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_name_input_register"
            style="@style/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/outer_padding"
            android:hint="Jon Deo"
            android:inputType="text" />
        <EditText
            android:id="@+id/et_email_input_register"
            style="@style/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/outer_padding"
            android:hint="jondeo@example.com"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_phone_input_register"
            style="@style/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/outer_padding"
            android:hint="+91-7345734573"
            android:inputType="phone" />
        <EditText
            android:visibility="invisible"
            android:id="@+id/et_otp_input_register"
            style="@style/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/outer_padding"
            android:hint="Enter OTP"
            android:inputType="numberSigned" />
        <TextView
            android:visibility="invisible"
            android:id="@+id/tv_resend_otp_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/purple"
            android:text="@string/login_resend_otp"
            android:layout_marginTop="@dimen/inner_padding" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/outer_padding"
            android:layout_marginHorizontal="@dimen/outer_padding"
            style="@style/primaryButton"
            android:text="@string/register_button" />

        <TextView
            android:id="@+id/tv_login_from_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Go to login Screen!"
            android:layout_marginTop="@dimen/outer_padding"
            android:textAlignment="center"
            android:textColor="@color/primary_red" />

    </LinearLayout>






</LinearLayout>